routes and controller of (auth and user) in backend

--- a/server/.env
+++ b/server/.env
@@ -1,6 +1,6 @@
-MONGO_URL = 'mongodb+srv://sagar9753:sbs&9753@cluster0.ylrsqob.mongodb.net/?retryWrites=true&w=majority&appName=AtlasApp'
+MONGO_URL = 'mongodb+srv://sagarrajput9753:My1song3@cluster0.bzxfinm.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0'
 
 
-PORT = 3001
+PORT = 5000
 
 JWT_SEC_KEY='thisisthejwtsecretkeyformyapplication'
