--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "react-spinners": "^0.13.8",
     "react-toastify": "^10.0.5",
     "redux-persist": "^6.0.0",
+    "stripe": "^15.12.0",
     "swiper": "^11.1.1"
   },
   "devDependencies": {
